--- a/layout/default.ejs
+++ b/layout/default.ejs
@@ -7,7 +7,14 @@
   </head>
 
   <body>
+    <!-- navbar -->
+    <%- include('./layout/navbar'); -%>
+
+    <!-- page content -->
     <%- include(content) %>
+
+    <!-- footer -->
+    <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
   </body>
