--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,6 @@
-<footer>footer</footer>
+<footer class="footer">
+  <p class="fs-3.5 text-center text-neutral-600">
+    <span class="d-block mb-1">Copyright ©2025 URBNSTYLE</span>
+    <span class="d-block">All Rights Reserved.</span>
+  </p>
+</footer>
