feat: 完成 navbar & footer

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -9,7 +9,7 @@
 @import 'base/reset';
 @import 'base/base';
 
-@import 'layout/header';
+@import 'layout/navbar';
 @import 'layout/footer';
 
 @import 'pages/index';
