--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,4 +1,21 @@
 <footer class="footer">
+  <nav class="container">
+    <div class="nav d-flex justify-between items-center">
+      <a href="index.html">
+        <img src="../assets/images/logo.svg" alt="logo" />
+      </a>
+
+      <ul class="pages">
+        <li>
+          <a href="products.html">商品列表</a>
+        </li>
+        <li>
+          <a href="story.html">品牌故事</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <p class="fs-3.5 text-center text-neutral-600">
     <span class="d-block mb-1">Copyright ©2025 URBNSTYLE</span>
     <span class="d-block">All Rights Reserved.</span>
