--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -20,5 +20,11 @@ img {
 
 a {
   display: inline-block;
+  color: inherit;
   text-decoration: none;
+  transition: color 0.3s ease;
+
+  &:hover {
+    color: $primary-400;
+  }
 }
