--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -1,13 +1,4 @@
-.footer {
-  padding: 64px 0;
-  background-color: $neutral-100;
-
-  .nav {
-    padding-bottom: 24px;
-    border-bottom: 1px solid $neutral-300;
-    margin-bottom: 32px;
-  }
-
+.navbar {
   .pages {
     display: flex;
     align-items: center;
