--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -46,3 +46,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Custom reset for specific elements */
+button {
+  all: unset;
+  display: inline-block;
+  cursor: pointer;
+}
