--- a/assets/scss/utils/_helpers.scss
+++ b/assets/scss/utils/_helpers.scss
@@ -1,3 +1,4 @@
+@import 'color';
 @import 'display';
 @import 'spacing';
 @import 'text';
@@ -33,5 +34,16 @@
 
   &:disabled {
     opacity: 0.4;
+  }
+}
+
+.stretched-link {
+  display: inline;
+
+  &::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    z-index: 1;
   }
 }
