--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,16 +1,16 @@
 <footer class="footer">
   <nav class="container">
-    <div class="nav d-flex justify-between items-center">
+    <div class="nav-content d-flex justify-between items-center gap-2 xs:flex-col xs:items-start">
       <a href="index.html">
         <img src="../assets/images/logo.svg" alt="logo" />
       </a>
 
-      <ul class="pages">
+      <ul class="d-flex items-center gap-4 fw-medium xs:flex-col xs:items-start xs:gap-1">
         <li>
-          <a href="products.html">商品列表</a>
+          <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
         </li>
         <li>
-          <a href="story.html">品牌故事</a>
+          <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
         </li>
       </ul>
     </div>
