--- a/layout/navbar.ejs
+++ b/layout/navbar.ejs
@@ -1,24 +1,22 @@
-<nav class="navbar">
-  <div class="container d-flex justify-between items-center py-4">
-    <div class="d-flex items-center gap-9">
-      <a href="index.html">
-        <img src="../assets/images/logo.svg" alt="logo" />
-      </a>
+<nav class="container d-flex justify-between items-center py-4 xs:py-3">
+  <div class="d-flex items-center gap-9">
+    <a href="index.html">
+      <img src="../assets/images/logo.svg" alt="logo" />
+    </a>
 
-      <ul class="pages">
-        <li>
-          <a href="products.html">商品列表</a>
-        </li>
-        <li>
-          <a href="story.html">品牌故事</a>
-        </li>
-      </ul>
-    </div>
+    <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
+      <li>
+        <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
+      </li>
+      <li>
+        <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
+      </li>
+    </ul>
+  </div>
 
-    <div>
-      <a href="javascript:;" class="p-3">
-        <i class="bi bi-person fs-6"></i>
-      </a>
-    </div>
+  <div>
+    <a href="login.html" class="p-3">
+      <i class="bi bi-person fs-6"></i>
+    </a>
   </div>
 </nav>
