--- a/assets/scss/pages/_story.scss
+++ b/assets/scss/pages/_story.scss
@@ -5,6 +5,14 @@
     width: 100%;
     height: 400px;
     object-fit: cover;
+
+    @include tablet() {
+      height: 320px;
+    }
+
+    @include mobile() {
+      height: 240px;
+    }
   }
 
   .title {
@@ -21,6 +29,11 @@
   padding-top: 64px;
   padding-bottom: 64px;
 
+  @include mobile() {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
   .quote,
   .section {
     max-width: 856px;
@@ -33,6 +46,11 @@
     background-color: $primary-100;
     margin-bottom: 48px;
 
+    @include mobile() {
+      padding: 24px;
+      margin-bottom: 32px;
+    }
+
     .title {
       margin-bottom: 12px;
     }
@@ -43,22 +61,36 @@
   }
 
   .section {
-    padding-bottom: 48px;
     border-bottom: 1px solid $neutral-300;
+    padding-bottom: 48px;
+
+    @include mobile() {
+      padding-bottom: 32px;
+    }
 
     &:not(:last-child) {
       margin-bottom: 48px;
+
+      @include mobile() {
+        margin-bottom: 32px;
+      }
     }
 
     h2.title {
       font-size: 24px;
       margin-bottom: 24px;
+
+      @include mobile() {
+        font-size: 20px;
+        margin-bottom: 16px;
+      }
     }
   }
 
   .history {
     ul {
-      list-style: disc inside;
+      list-style: disc outside;
+      padding-left: 24px;
     }
 
     li:not(:last-child) {
@@ -84,6 +116,7 @@
   }
 
   .story .link {
+    width: fit-content;
     padding: 8px 0;
   }
 }
