--- a/contents/product.ejs
+++ b/contents/product.ejs
@@ -1,5 +1,5 @@
 <main class="product-main container">
-  <div class="d-flex items-start gap-6">
+  <div class="d-flex items-start gap-6 md:flex-col">
     <ul class="showcase">
       <li class="showcase-item">
         <img src="../assets/images/product/image.png" alt="Platform 404 展示圖" />
@@ -28,8 +28,8 @@
     </ul>
 
     <div class="flex-grow-1">
-      <nav class="mb-3">
-        <ol class="breadcrumb">
+      <nav class="mb-3 xs:mb-2">
+        <ol class="breadcrumb xs:fs-3.5">
           <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
           <li class="breadcrumb-item"><a href="javascript:;">女鞋</a></li>
           <li class="breadcrumb-item"><a href="javascript:;">滑板鞋</a></li>
@@ -38,10 +38,10 @@
       </nav>
 
       <section class="mb-8">
-        <h1 class="title fs-8 mb-4">Platform 404</h1>
+        <h1 class="title fs-8 mb-4 xs:mb-3">Platform 404</h1>
 
-        <div class="d-flex items-center gap-2 mb-4">
-          <p class="title text-primary-400 fs-5">NT$2,600</p>
+        <div class="d-flex items-center gap-2 mb-4 xs:mb-3">
+          <p class="title text-primary-400 fs-5 xs:fs-4">NT$2,600</p>
           <p class="original-price">NT$3,200</p>
         </div>
 
@@ -56,7 +56,7 @@
         </div>
       </section>
 
-      <section class="mb-8">
+      <section class="mb-8 xs:mb-6">
         <h2 class="mb-2">顏色</h2>
 
         <ul class="d-flex flex-wrap gap-2">
@@ -71,7 +71,7 @@
         </ul>
       </section>
 
-      <section class="mb-12">
+      <section class="mb-12 xs:mb-6">
         <h2 class="mb-2">尺寸</h2>
 
         <ul class="d-flex flex-wrap gap-2 mb-2">
@@ -107,12 +107,15 @@
         <p class="text-danger-300 fs-3.5">僅剩 3 雙</p>
       </section>
 
-      <div class="d-flex items-center gap-2 mb-8">
-        <button type="button" class="btn btn-outline-neural-900 flex-grow-1">
+      <div class="d-flex items-center gap-2 mb-8 xs:flex-reverse">
+        <button type="button" class="btn btn-outline-neural-900 w-100 flex-grow-1 xs:d-none">
           <i class="bi bi-heart"></i>加入收藏
         </button>
-        <button type="button" class="btn btn-neural-900 flex-grow-1">
-          <i class="bi bi-handbag"></i>加入收藏
+        <button type="button" class="d-none p-3 xs:d-block">
+          <i class="bi bi-heart fs-6"></i>
+        </button>
+        <button type="button" class="btn btn-neural-900 w-100 flex-grow-1">
+          <i class="bi bi-handbag"></i>門市預約試穿
         </button>
       </div>
 
@@ -147,7 +150,7 @@
   </div>
 </main>
 
-<section class="container py-12">
+<section class="container py-12 mb-10 xs:py-10 xs:mb-6">
   <h2 class="title fs-6 py-2 mb-4">你可能也喜歡...</h2>
   <ul id="relatedProductList" class="related-product-list"></ul>
 </section>
