--- a/contents/products.ejs
+++ b/contents/products.ejs
@@ -1,12 +1,13 @@
 <main class="products-main container">
-  <nav class="mb-6">
+  <nav class="mb-6 xs:mb-3">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
+      <li class="breadcrumb-item"><a href="javascript:;">女鞋</a></li>
       <li class="breadcrumb-item active">所有商品</li>
     </ol>
   </nav>
 
-  <h1 class="title fs-7 py-2 mb-6">所有商品</h1>
+  <h1 class="title fs-7 py-2 mb-6 xs:mb-3">女鞋</h1>
 
   <div class="d-flex gap-6">
     <nav class="category-menu">
