--- a/layout/infoBar.ejs
+++ b/layout/infoBar.ejs
@@ -1,8 +1,8 @@
-<section class="bg-primary-200 py-6 mt-12">
+<section class="bg-primary-200 py-6">
   <div class="container">
-    <div class="d-flex justify-center items-center gap-6">
-      <h2 class="title fs-6">加入會員取得 9 折優惠</h2>
-      <a href="register.html" class="btn btn-neural-900">馬上註冊</a>
+    <div class="d-flex justify-center items-center gap-6 xs:gap-4">
+      <h2 class="title fs-6 xs:fs-5">加入會員取得 9 折優惠</h2>
+      <a href="signup.html" class="btn btn-neural-900 xs:btn-sm">馬上註冊</a>
     </div>
   </div>
 </section>
