--- a/contents/index.ejs
+++ b/contents/index.ejs
@@ -1,1 +1,201 @@
-<h1>首頁</h1>
+<header class="index-banner">
+  <picture>
+    <source media="(max-width: 575px)" srcset="../assets/images/index/banner-sm.png" />
+    <img src="../assets/images/index/banner.png" alt="URBNSTEP 街頭機能鞋" class="banner-img" />
+  </picture>
+
+  <div class="content container d-flex items-center">
+    <div>
+      <h1 class="title text-white fs-16 mb-4 md:fs-12 md:mb-2">URBNSTEP</h1>
+      <p class="title text-white fs-7 mb-12 md:fs-5 md:mb-8">Your Step, Your Statement</p>
+      <a href="products.html" class="btn btn-primary-300">立即選購</a>
+    </div>
+  </div>
+</header>
+
+<main class="index-main">
+  <section class="section container">
+    <div class="text-center">
+      <p class="title fs-12 mb-3 xs:fs-8 xs:mb-2">New Arrival</p>
+      <h2 class="news-title title">新品上市</h2>
+    </div>
+
+    <ul class="d-flex flex-wrap row-gap-10 column-gap-6 xs:row-gap-6 xs:column-gap-3">
+      <li class="news-card card xs:card-sm">
+        <img src="../assets/images/index/new-1.png" alt="Monoverse" class="card-img" />
+        <h3 class="title">Monoverse</h3>
+        <p class="price">NT$3,600</p>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="news-card card xs:card-sm">
+        <img src="../assets/images/index/new-2.png" alt="PLATFORM 404" class="card-img" />
+        <h3 class="title">PLATFORM 404</h3>
+        <p class="price">NT$2,600</p>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="news-card card xs:card-sm">
+        <img src="../assets/images/index/new-3.png" alt="URBN Force" class="card-img" />
+        <h3 class="title">URBN Force</h3>
+        <p class="price">NT$3,200</p>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="news-card card xs:card-sm">
+        <img src="../assets/images/index/new-4.png" alt="Mode90" class="card-img" />
+        <h3 class="title">Mode90</h3>
+        <p class="price">NT$4,000</p>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="section container">
+    <h2 class="title">熱銷補貨</h2>
+
+    <ul class="d-flex gap-6 md:gap-4 overflow-x-auto">
+      <li class="hots-card position-relative">
+        <p class="badge">人氣 No.1</p>
+        <img src="../assets/images/products/product-3.png" alt="Melty Kiss" class="card-img" />
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="hots-card position-relative">
+        <p class="badge">人氣 No.1</p>
+        <img src="../assets/images/products/product.png" alt="Platform 404" class="card-img" />
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="hots-card position-relative">
+        <p class="badge">人氣 No.1</p>
+        <img src="../assets/images/products/product-6.png" alt="R:UNER" class="card-img" />
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="hots-card position-relative">
+        <p class="badge">人氣 No.1</p>
+        <img src="../assets/images/products/product-4.png" alt="BOOMBLOK" class="card-img" />
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="co-branded d-flex justify-center items-center position-relative my-12 xs:my-6">
+    <picture>
+      <source media="(max-width: 575px)" srcset="../assets/images/index/banner-co-branded-sm.png" />
+      <img src="../assets/images/index/banner-co-branded.png" class="bg-img" />
+    </picture>
+
+    <div class="content">
+      <div class="position-relative text-center mb-12 xs:mb-8">
+        <h2
+          class="title d-flex justify-center items-center gap-6 text-white fs-12 mb-4 md:fs-10 xs:flex-col xs:gap-2 xs:fs-8"
+        >
+          <span>URBNSTEP</span><span class="text-primary-300 fs-10 md:fs-9 xs:fs-7">x</span
+          ><span>Kevin Chen</span>
+        </h2>
+
+        <h3 class="title text-white mb-8 fs-8 md:fs-7 xs:fs-5 xs:mb-6">跨界聯名，限量發售</h3>
+
+        <p class="text-neutral-500 fs-5 md:fs-4">
+          <span class="xs:d-block xs:mb-1">新銳漫畫家 Kevin Chen 親自操刀設計</span
+          ><span class="xs:d-none">，</span><span class="xs:d-block">街頭能量全面引爆！</span>
+        </p>
+
+        <img src="../assets/images/index/star.svg" class="star" />
+        <img src="../assets/images/index/sparkle.svg" class="sparkle" />
+      </div>
+
+      <a href="products.html" class="btn btn-primary-300 mx-auto">立即搶購</a>
+    </div>
+  </section>
+
+  <section class="section container">
+    <h2 class="title">依系列選購</h2>
+
+    <ul class="d-flex flex-wrap gap-6 xs:gap-3">
+      <li class="series-card position-relative d-flex justify-center items-center">
+        <img
+          src="../assets/images/products/product-6.png"
+          alt="URBN RUNNER 慢跑系列"
+          class="w-100"
+        />
+        <h3 class="position-absolute title text-center text-white">
+          <span class="en d-block mb-2">URBN RUNNER</span
+          ><span class="d-block fs-6 xs:fs-4">慢跑系列</span>
+        </h3>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="series-card position-relative d-flex justify-center items-center">
+        <img src="../assets/images/products/product.png" alt="STREETMODE 滑板系列" class="w-100" />
+        <h3 class="position-absolute title text-center text-white">
+          <span class="en d-block mb-2">STREETMODE</span
+          ><span class="d-block fs-6 xs:fs-4">滑板系列</span>
+        </h3>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="series-card position-relative d-flex justify-center items-center">
+        <img
+          src="../assets/images/products/product-9.png"
+          alt="CHUNK DISTRICT 厚底系列"
+          class="w-100"
+        />
+        <h3 class="position-absolute title text-center text-white">
+          <span class="en d-block mb-2">CHUNK DISTRICT</span
+          ><span class="d-block fs-6 xs:fs-4">厚底系列</span>
+        </h3>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+      <li class="series-card position-relative d-flex justify-center items-center">
+        <img
+          src="../assets/images/products/product-1.png"
+          alt="COLLAB ZONE 聯名企劃"
+          class="w-100"
+        />
+        <h3 class="position-absolute title text-center text-white">
+          <span class="en d-block mb-2">COLLAB ZONE</span
+          ><span class="d-block fs-6 xs:fs-4">聯名企劃</span>
+        </h3>
+        <a href="product.html" class="stretched-link"></a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="section container">
+    <h2 class="title">穿搭靈感</h2>
+
+    <ul class="inspiration-board">
+      <li class="inspiration-item">
+        <img src="../assets/images/index/inspiration-1.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item">
+        <img src="../assets/images/index/inspiration-2.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item md:large-item">
+        <img src="../assets/images/index/inspiration-4.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item">
+        <img src="../assets/images/index/inspiration-5.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item large-item">
+        <img src="../assets/images/index/inspiration-10.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item large-item md:large-item">
+        <img src="../assets/images/index/inspiration-3.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item">
+        <img src="../assets/images/index/inspiration-6.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item">
+        <img src="../assets/images/index/inspiration-7.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item">
+        <img src="../assets/images/index/inspiration-8.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="inspiration-item">
+        <img src="../assets/images/index/inspiration-9.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="md:d-none xs:d-block">
+        <img src="../assets/images/index/inspiration-11.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+      <li class="md:d-none xs:d-block">
+        <img src="../assets/images/index/inspiration-12.png" alt="URBNSTEP 機能鞋穿搭" />
+      </li>
+    </ul>
+  </section>
+</main>
