fix: 修正穿搭靈感圖片的顯示

--- a/contents/index.ejs
+++ b/contents/index.ejs
@@ -190,10 +190,10 @@
       <li class="inspiration-item">
         <img src="../assets/images/index/inspiration-9.png" alt="URBNSTEP 機能鞋穿搭" />
       </li>
-      <li class="md:d-none xs:d-block">
+      <li class="inspiration-item md:d-none xs:d-block">
         <img src="../assets/images/index/inspiration-11.png" alt="URBNSTEP 機能鞋穿搭" />
       </li>
-      <li class="md:d-none xs:d-block">
+      <li class="inspiration-item md:d-none xs:d-block">
         <img src="../assets/images/index/inspiration-12.png" alt="URBNSTEP 機能鞋穿搭" />
       </li>
     </ul>
