--- a/assets/scss/utils/_color.scss
+++ b/assets/scss/utils/_color.scss
@@ -18,6 +18,10 @@
   color: $primary-400;
 }
 
+.text-primary-500 {
+  color: $primary-500;
+}
+
 .text-danger-300 {
   color: $danger-300;
 }
@@ -34,4 +38,8 @@
 
 .bg-primary-200 {
   background-color: $primary-200;
+}
+
+.bg-primary-300 {
+  background-color: $primary-300;
 }
