--- a/assets/scss/utils/_layout.scss
+++ b/assets/scss/utils/_layout.scss
@@ -35,6 +35,9 @@ $layout-utils: (
   w-100: (
     width: 100%,
   ),
+  w-fit: (
+    width: fit-content,
+  ),
   position-relative: (
     position: relative,
   ),
