--- a/contents/product.ejs
+++ b/contents/product.ejs
@@ -108,15 +108,15 @@
       </section>
 
       <div class="d-flex items-center gap-2 mb-8 xs:flex-reverse">
-        <button type="button" class="btn btn-outline-neural-900 w-100 flex-grow-1 xs:d-none">
+        <a href="collection.html" class="btn btn-outline-neural-900 w-100 flex-grow-1 xs:d-none">
           <i class="bi bi-heart"></i>加入收藏
-        </button>
-        <button type="button" class="d-none p-3 xs:d-block">
+        </a>
+        <a href="collection.html" class="d-none p-3 xs:d-block">
           <i class="bi bi-heart fs-6"></i>
-        </button>
-        <button type="button" class="btn btn-neural-900 w-100 flex-grow-1">
+        </a>
+        <a href="javascript:;" class="btn btn-neural-900 w-100 flex-grow-1">
           <i class="bi bi-handbag"></i>門市預約試穿
-        </button>
+        </a>
       </div>
 
       <section class="notice">
