fix: 修正標籤的使用

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -173,7 +173,7 @@
       max-width: calc((100% - 12px) / 2);
     }
 
-    &::before {
+    a::before {
       content: '';
       position: absolute;
       inset: 0;
