--- a/layout/default.ejs
+++ b/layout/default.ejs
@@ -26,10 +26,11 @@
     <!-- template -->
     <template id="productCardTemp">
       <li class="card">
-        <img src="../assets/images/products/product.png" alt="PLATFORM 404" class="card-img" />
-        <h2 class="title">PLATFORM 404</h2>
-        <p class="price">NT$2,600</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="../assets/images/products/product.png" alt="PLATFORM 404" class="card-img" />
+          <h2 class="title">PLATFORM 404</h2>
+          <p class="price">NT$2,600</p>
+        </a>
       </li>
     </template>
 
